fix index page toggle moving on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -519,12 +519,12 @@ fieldset[disabled] .btn-xl.active {
 	.navbar-dark .navbar-toggler-icon {
 		background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.7%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 	}
-	.navbar-dark .navbar-collapse {
+	/*.navbar-dark .navbar-collapse {
 		position: absolute;
 		width: 100%;
 		top: 0;
 		padding-top: 56px;
-	}
+	}*/
 
     .navbar-default .navbar-brand {
         font-size: 2em;
